# nao-mgs-workflow

./: .gitignore  .gitmodules  .nextflowignore  .trivyignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  addgenome_bench.nf  concat_bench.nf  dedup.py  expected-outputs-downstream-ont.txt  main.nf  nao_dedup.c  nao_dedup.h  nf-test.config  pipeline-version.txt  pyproject.toml
.claude/: benchmarking.md
.claude/agents/: bench-module-local.config  bench-module-local.md  bench-workflow-batch.md  ci-debugger.md  pr-preflight.md  schema-checker.md  update-docs.md  version-bump.md
.claude/pr-examples/: module-perf-bench.md  pipeline-bench.md
.claude/scripts/: bench_module.config  bench_output_equality.py  parse_bench_trace.py  test_bench_output_equality.py  test_parse_bench_trace.py
.gemini/: config.yaml  styleguide.md
.github/workflows/: benchmark-illumina-100M.yml  benchmark-illumina-50M.yml  benchmark-on-demand.yml  benchmark-ont-100k.yml  benchmark-ont-2M.yml  build-containers.yml  bump-version.yml  check-changelog.yml  check-index-age.yml  check-nextflow-version.yml  check-process-tags.yml  check-release.yml  check-version.yml  create-release.yml  end-to-end.yml  label-issues.yml  manual-reset.yml  mypy.yml  nf-test-modules.yml  nf-test-subworkflows.yml  nf-test-workflows-downstream.yml  nf-test-workflows-index.yml  nf-test-workflows-run.yml  nf-test.yml  pytest.yml  rebuild-benchmark-index.yml  reset-branches.yml  ruff.yml  rust-tools.yml  scheduled-trivy-triage.yml  setup-rust-container.yml  test-chained.yml  trivy-scan.yml  validate-test-data.yml
bench/: bench.config  cohort_large.config  cohort_single.config  cohort_small.config  cohort_xsmall.config  launch.sh  launch_addgenome.sh
configs/: containers.config  downstream.config  downstream_ont.config  index-for-run-test.config  index.config  logging.config  logging_downstream.config  profiles.config  resources.config  run.config  run_ont.config
containers/: adapterremoval.yml  bbtools.yml  bbtools_samtools.yml  biopython.yml  blast.yml  bowtie2_samtools.yml  bracken.yml  bracken_plus_utils.yml  coreutils.yml  coreutils_file.yml  coreutils_gzip_gawk.yml  curl.yml  cutadapt.yml  fastp.yml  fastqc.yml  filtlong.yml  kraken2.yml  minimap2_samtools.yml  multiqc.yml  ncbi_datasets.yml  ncbi_genome_download.yml  pandas.yml  pysam_biopython.yml  python.yml  rpkg.yml  seqkit.yml  seqtk.yml  tar_wget.yml  tidyverse.yml  unzip.yml  vsearch.yml
debug/: concatenate_repro.nf  seqkit_rmdup_oom.config  seqkit_rmdup_oom.nf
docker/: nao-rust-tools.Dockerfile
docs/: README.md  annotation.md  batch.md  ci.md  config.md  developer.md  downstream.md  index.md  installation.md  output.md  rfc-trunk-based-development.md  run.md  testing.md  troubleshooting.md  usage.md  versioning.md  virus_hits_final.md
lib/: ResourceTierUtils.groovy  SentinelUtils.groovy  VersionUtils.groovy
modules/local/: conftest.py
post-processing/: README.md
post-processing/polio/: identify-polio.py
post-processing/rust_dedup/: Cargo.toml
post-processing/src/: Makefile  similarity_duplicate_marking.c
post-processing/subset/: subset-validation-hits-by-clade.py  subset-validation-hits-by-clade.sh  test_subset-validation-hits-by-clade.py
post-processing/tests/: test_combination_duplicate_marking.py  test_similarity_duplicate_marking.py
ref/: host-infection-overrides.json  hv_patterns_exclude.txt
rust-tools/: Cargo.toml  README.md
rust-tools/mark_duplicates/: Cargo.toml
rust-tools/mark_duplicates_similarity/: Cargo.toml
rust-tools/mark_duplicates_similarity/src/: main.rs
rust-tools/mark_duplicates_similarity/tests/: integration.rs
rust-tools/process_vsearch_cluster_output/: Cargo.toml
rust-tools/process_vsearch_cluster_output/src/: main.rs
rust-tools/process_vsearch_cluster_output/tests/: integration.rs
rust-tools/process_vsearch_cluster_output/tests/fixtures/: tiny.uc
schemas/: bracken.schema.json  clade_counts.schema.json  duplicate_stats.schema.json  fastp.schema.corrected.json  fastp.schema.json  kraken.schema.json  qc_adapter_stats.schema.json  qc_adapter_stats_raw.schema.json  qc_basic_stats.schema.json  qc_basic_stats_raw.schema.json  qc_length_stats.schema.json  qc_length_stats_cleaned.schema.json  qc_quality_base_stats.schema.json  qc_quality_base_stats_cleaned.schema.json  qc_quality_sequence_stats.schema.json  qc_quality_sequence_stats_raw.schema.json  read_counts.schema.json  validation_hits.schema.json
src/: lib.rs
test-data/: grouping-samplesheet.csv  grouping-single-end-samplesheet.csv  ont-samplesheet.csv  samplesheet.csv  single-end-samplesheet.csv
test-data/addConditionalTsvColumn/: test_tab_with_quotes.tsv
test-data/writeSentinel/downstream/: pyproject.toml
tests/: c_wrapper.py  nextflow.config  test_dedup.py
tests/rust_bindings/: pyproject.toml
tests/rust_bindings/src/: lib.rs
ultima_proc/: blast_settings_notes.txt  claude_ultima_proc_notes.txt  clean_ultima_results.py  dedup_cross_sample.py  downsample.config  downsample.nf  downsample_samplesheet.csv  downstream_ultima.config  gemini_ultima_proc_notes.txt  gpt_ultima_proc_notes.txt  groups_ultima.tsv  initial_design_task.txt  other_tools_considered.md  plan_downstream_simulated_pe.md  plan_downstream_ultima.md  plan_illumina_path.md  plan_middle_path.md  plan_ont_path.md  plan_ont_path_complementary.md  plan_simulated_pe.md  prepare_downsample.py  read_funnel.py  restore_controls.sh  run_ultima.config  samplesheet_ultima.csv  simulate_pe.config  simulate_pe.nf
workflows/: downstream.nf  index.nf  run.nf  run_validation.nf
(+525 files in other folders)
