[package]
name = "nao_dedup"
version = "0.1.0"
edition = "2024"

[lib]
name = "nao_dedup"
crate-type = ["rlib"]

[[bin]]
name = "dedup_interleaved_fastq"
path = "src/dedup_interleaved_fastq.rs"

[dependencies]
ahash = "0.8"
rustc-hash = "2.1"
smallvec = "1.13"
flate2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
