[workspace]
members = ["mark_duplicates"]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic instead of unwinding
strip = false       # Keep symbols for readable panic stack traces
