[package]
name = "mark_duplicates_similarity"
version = "0.1.0"
edition = "2021"

[dependencies]
nao_dedup = { git = "https://github.com/securebio/nao-dedup", rev = "404c7080e4f5a73d0fbdd02e535858c74b0ebeb0" }
flate2 = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "std", "help"], default-features = false }

[dev-dependencies]
flate2 = "1.0"
